 - take screenshots via ThreadPool
 - use pcall in LuaUtils::Echo
 - catch all exceptions in Game::Load and make it non-interruptable
 - turn LoadDefs content_error exceptions into clean exits
 - set modType to an integer (not string) value in base-content modinfo.lua's
 - do not auto-add springcontent dependency to non-game "mod" archives
 - downgrade non-writeable springsettings files to a warning
 - allow maps to not supply a type-map; one fewer exception to worry about
 - improve RNG statistical quality; sampled ints can now also exceed 0x7fff
 - make the *nix CrashHandler compile on ARM; do not use cpuid on non-x86 builds
 - enable compilation without streflop
 - change ForceShaders to ForceDisableShaders (which does the opposite)
 - add UseLuaMemPools config-option
 - add ForceCoreContext config-option
 - add ForceSwapBuffers config-option
 - add ForceDisableClipCtrl config-option
 - add NETMSG_LOGMSG for synced logging
 - netlog Lua memory allocation failures
 - netlog SHA512 digests over cached path-estimator data
 - log 'Warning: Dropping packet from unknown IP' only once per IP
 - filter out consecutive duplicated log-messages; add LogRepeatLimit config-option
 - fix inverted los-test logic in AI GetProperty callback (patch by rlcevg)
 - fix memleak in generated C++ AI interface (patch by rlcevg)
 - fix ResourceHandler memleak (patch by rlcevg)
 - save SkirmishAI data in separate streams (patch by rlcevg)
 - wrecks in water emit bubbles instead of smoke (patch by Sprunk)
 - store path-estimator cache files as map.pe-hash.zip; forces a refresh
 - delete cached path-estimator data which can not be opened or read successfully
 - integrate custom selection volumes; also support subtable-based {col,sel}volume definitions
 - refactor the object death-dependency system
 - trim unused AssParser root-piece transform overrides;
   'rotAxisSigns' and 'rotAxisMap' from 95.0 are also gone
 - rip out DynamicSun