@@ -11,8 +11,8 @@
 
 
 
-volatile bool FileSystemInitializer::initialized = false;
-volatile bool FileSystemInitializer::abortedInit = false;
+volatile bool FileSystemInitializer::initSuccess = false;
+volatile bool FileSystemInitializer::initFailure = false;
 
 void FileSystemInitializer::PreInitializeConfigHandler(const std::string& configSource, const bool safemode)
 {
@@ -33,7 +33,7 @@ void FileSystemInitializer::InitializeLogOutput(const std::string& filename)
 
 bool FileSystemInitializer::Initialize()
 {
-	if (initialized)
+	if (initSuccess)
 		return true;
 
 	try {
@@ -45,28 +45,30 @@ bool FileSystemInitializer::Initialize()
 		archiveScanner = new CArchiveScanner();
 		vfsHandler = new CVFSHandler();
 
-		initialized = true;
+		initSuccess = true;
 	} catch (const std::exception& ex) {
 		// even if we end up here, do not clean up configHandler yet
 		// since it can already have early observers registered that
 		// do not remove themselves until exit
 		logOutput.LogExceptionInfo("FileSystemInit", ex.what());
 		Cleanup(false);
-		abortedInit = true;
+		initFailure = true;
 	} catch (...) {
 		Cleanup(false);
-		abortedInit = true;
+		initFailure = true;
 	}
 
-	return (initialized && !abortedInit);
+	return (initSuccess && !initFailure);
 }
 
 void FileSystemInitializer::Cleanup(bool deallocConfigHandler)
 {
-	if (initialized) {
+	if (initSuccess) {
 		spring::SafeDelete(archiveScanner);
 		spring::SafeDelete(vfsHandler);
-		initialized = false;
+
+		initSuccess = false;
+		initFailure = false;
 	}
 
 	if (deallocConfigHandler) {
